--- a/Develop/package.json
+++ b/Develop/package.json
@@ -9,7 +9,7 @@
   "author": "ndufour48",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "8.2.4"
+    "inquirer": "^8.2.4"
   },
   "repository": {
     "type": "git",
